[package]
name = "tcpsrv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
bytes = "1.1.0"
chrono = "0.4.19"
futures = "0.3.21"
memoffset = "0.6.5"
prost = "0.9.0"
rand = "0.8.5"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"

[build-dependencies]
prost-build = "0.9.0"
